--- a/Game_Project/Game_Project.vcxproj.filters
+++ b/Game_Project/Game_Project.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="bubbles.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="money.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="bubbles.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="money.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
