Added background jazz music, added scrubbing sound effects and connected bars in settings to respective music groups

--- a/Game_Project/Game_Project.vcxproj
+++ b/Game_Project/Game_Project.vcxproj
@@ -106,6 +106,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClCompile Include="settings.c" />
     <ClCompile Include="settings_options.c" />
     <ClCompile Include="shop.c" />
+    <ClCompile Include="sounds.c" />
     <ClCompile Include="splashscreen.c" />
     <ClCompile Include="sponge.c" />
     <ClCompile Include="timer.c" />
@@ -122,6 +123,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClInclude Include="settings.h" />
     <ClInclude Include="settings_options.h" />
     <ClInclude Include="shop.h" />
+    <ClInclude Include="sounds.h" />
     <ClInclude Include="splashscreen.h" />
     <ClInclude Include="sponge.h" />
     <ClInclude Include="timer.h" />
