--- a/Game_Project/Game_Project.vcxproj.filters
+++ b/Game_Project/Game_Project.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="sounds.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="roomba.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h">
@@ -108,6 +111,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="sounds.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="roomba.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
