--- a/Game_Project/Game_Project.vcxproj
+++ b/Game_Project/Game_Project.vcxproj
@@ -97,6 +97,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bubbles.c" />
+    <ClCompile Include="credits.c" />
     <ClCompile Include="dirt.c" />
     <ClCompile Include="game.c" />
     <ClCompile Include="gameover.c" />
@@ -117,6 +118,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bubbles.h" />
+    <ClInclude Include="credits.h" />
     <ClInclude Include="dirt.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="gameover.h" />
