soap.c/soap.h: implemented a stamina bar for the soap, currently drains at a speed of 2.0f, if stamina bar is zero we can't scrub the dirt off. shop.c: added a hud to buy soap, cost 2 dollar 2 dollar :3 dirt.c: for each day passed, the dirt gets harder to scrub off by 1% (we'll adjust accordingly during playtesting) game.c: updated the code for soap.

--- a/Game_Project/Game_Project.vcxproj
+++ b/Game_Project/Game_Project.vcxproj
@@ -109,6 +109,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClCompile Include="settings.c" />
     <ClCompile Include="settings_options.c" />
     <ClCompile Include="shop.c" />
+    <ClCompile Include="soap.c" />
     <ClCompile Include="sounds.c" />
     <ClCompile Include="day.c" />
     <ClCompile Include="splashscreen.c" />
@@ -131,6 +132,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClInclude Include="settings.h" />
     <ClInclude Include="settings_options.h" />
     <ClInclude Include="shop.h" />
+    <ClInclude Include="soap.h" />
     <ClInclude Include="sounds.h" />
     <ClInclude Include="splashscreen.h" />
     <ClInclude Include="sponge.h" />
