Added nameentry.c and .h. They are empty for now.

--- a/Game_Project/Game_Project.vcxproj
+++ b/Game_Project/Game_Project.vcxproj
@@ -104,6 +104,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClCompile Include="gameover.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="mainmenu.c" />
+    <ClCompile Include="nameentry.c" />
     <ClCompile Include="plate.c" />
     <ClCompile Include="roomba.c" />
     <ClCompile Include="settings.c" />
@@ -127,6 +128,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClInclude Include="gameover.h" />
     <ClInclude Include="day.h" />
     <ClInclude Include="mainmenu.h" />
+    <ClInclude Include="nameentry.h" />
     <ClInclude Include="plate.h" />
     <ClInclude Include="roomba.h" />
     <ClInclude Include="settings.h" />
