--- a/Game_Project/Game_Project.vcxproj.filters
+++ b/Game_Project/Game_Project.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="soap.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="nameentry.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gameover.h">
@@ -138,6 +141,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="soap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="nameentry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
