--- a/Game_Project/Game_Project.vcxproj.filters
+++ b/Game_Project/Game_Project.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="debug.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bubblegun.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gameover.h">
@@ -150,6 +153,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="bubblegun.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
