--- a/Game_Project/Game_Project.vcxproj
+++ b/Game_Project/Game_Project.vcxproj
@@ -118,6 +118,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClCompile Include="splashscreen.c" />
     <ClCompile Include="sponge.c" />
     <ClCompile Include="timer.c" />
+    <ClCompile Include="upgrades.c" />
     <ClCompile Include="utils.c" />
     <ClCompile Include="money.c" />
   </ItemGroup>
@@ -143,6 +144,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClInclude Include="splashscreen.h" />
     <ClInclude Include="sponge.h" />
     <ClInclude Include="timer.h" />
+    <ClInclude Include="upgrades.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="money.h" />
   </ItemGroup>
