--- a/Game_Project/Game_Project.vcxproj
+++ b/Game_Project/Game_Project.vcxproj
@@ -105,6 +105,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClCompile Include="faucet.c" />
     <ClCompile Include="game.c" />
     <ClCompile Include="gameover.c" />
+    <ClCompile Include="img_font_init.c" />
     <ClCompile Include="leaderboard.c" />
     <ClCompile Include="leaderboardentry.c" />
     <ClCompile Include="main.c" />
@@ -135,6 +136,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClInclude Include="game.h" />
     <ClInclude Include="gameover.h" />
     <ClInclude Include="day.h" />
+    <ClInclude Include="img_font_init.h" />
     <ClInclude Include="leaderboard.h" />
     <ClInclude Include="leaderboardentry.h" />
     <ClInclude Include="mainmenu.h" />
