Tutorial in progress

--- a/Game_Project/Game_Project.vcxproj
+++ b/Game_Project/Game_Project.vcxproj
@@ -120,6 +120,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClCompile Include="splashscreen.c" />
     <ClCompile Include="sponge.c" />
     <ClCompile Include="timer.c" />
+    <ClCompile Include="tutorial.c" />
     <ClCompile Include="upgrades.c" />
     <ClCompile Include="utils.c" />
     <ClCompile Include="money.c" />
@@ -148,6 +149,7 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /
     <ClInclude Include="splashscreen.h" />
     <ClInclude Include="sponge.h" />
     <ClInclude Include="timer.h" />
+    <ClInclude Include="tutorial.h" />
     <ClInclude Include="upgrades.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="money.h" />
