changed project properties to be in line with assets subfolders

--- a/Game_Project/Game_Project.vcxproj
+++ b/Game_Project/Game_Project.vcxproj
@@ -131,7 +131,12 @@
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q
 xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\CProcessingd.dll" "$(OutDir)" /s /r /y /q
-xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmodL.dll" "$(OutDir)" /s /r /y /q</Command>
+xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmodL.dll" "$(OutDir)" /s /r /y /q
+xcopy "$(SolutionDir)Assets\image\*.*" "$(OutDir)Assets\" /r /y /q
+xcopy "$(SolutionDir)Assets\sound\*.*" "$(OutDir)Assets\" /r /y /q
+xcopy "$(SolutionDir)Assets\font\*.*" "$(OutDir)Assets\" /r /y /q
+xcopy "$(SolutionDir)Assets\data\*.*" "$(OutDir)Assets\" /r /y /q
+xcopy "$(SolutionDir)Assets\animation\*.*" "$(OutDir)Assets\" /r /y /q</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -153,7 +158,12 @@ xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmodL.dll" "$(OutDir)" /s /r /y 
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q
 xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\CProcessing.dll" "$(OutDir)" /s /r /y /q
-xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /q</Command>
+xcopy "$(SolutionDir)Extern\CProcessing\lib\x64\fmod.dll" "$(OutDir)" /s /r /y /q
+xcopy "$(SolutionDir)Assets\image\*.*" "$(OutDir)Assets\" /r /y /q
+xcopy "$(SolutionDir)Assets\sound\*.*" "$(OutDir)Assets\" /r /y /q
+xcopy "$(SolutionDir)Assets\font\*.*" "$(OutDir)Assets\" /r /y /q
+xcopy "$(SolutionDir)Assets\data\*.*" "$(OutDir)Assets\" /r /y /q
+xcopy "$(SolutionDir)Assets\animation\*.*" "$(OutDir)Assets\" /r /y /q</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
